--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,58 +1,155 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    height: 1080px;
+    background-color: #FFFCED;
 }
 
-header {
+.navbar {
     display: flex;
-    background-color: #FE72A9;
+    background-color: #FFFCED;
+    padding: 20px 40px;
     gap: 50px;
-    padding: 5px 100px;
-    color: #F9FAF8;
-
+    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
-header img {
+.navbar a:not(.name) {
+    font-size: 25px;
+    text-decoration: none;
+    color: black;
+    font-family: 'Nunito';
+}
+
+.navbar a:hover:not(.name) {
+    color: #A8D6A7;
+}
+
+.name {
+    font-size: 35px;
+    text-decoration: none;
+    color: black;
     margin-right: auto;
-}
-
-header h2 {
-    font-size: 18px;
+    font-family: 'Shrikhand';
 }
 
 /* First Section */
 .first_sec {
     display: flex;
     padding: 30px 90px;
+    padding-bottom: 150px;
+    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
-.first_sec h1 {
-    margin-bottom: 0;
-    font-size: 40px;
+
+.introduction {
+    margin: 0 auto;
 }
 
-.homepage_text {
-    margin-top: 10px;
-    margin-right: 20px;
+.introduction h1 {
+    color: #000;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 400;
+    font-family: 'Shrikhand';
 }
 
-.button {
-    width: 200px;
-    border-radius: 15px;
-    background-color: #DD4470;
-    color: whitesmoke;
+.introduction h2 {
+    color: #000;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 350;
+    font-family: 'Nunito';
+}
+
+.introduction .button {
+    font-family: 'Shrikhand';
+    font-weight: 400;
+    width: 300px;
+    border-radius: 40px;
+    background-color: #A8D6A7;
     padding: 20px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 150px;
+    font-size: 30px;
 }
+
 
 /* Second section */
 .second_sec {
     display: flex;
     padding: 30px 90px;
+    padding-bottom: 150px;
+    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
-.second_sec .item {
+.about {
+    margin: 0 auto;
     text-align: center;
+}
+
+.title {
+    font-family: 'Shrikhand';
+    font-weight: 400;
+}
+
+.homepage_text {
+    font-family: 'Nunito';
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+.mission_box .mission_text {
+    font-family: 'Nunito';
+    color: #000;
+    font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: -15px;
+}
+
+.box {
+    display: flex;
+    height: 150px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    background-color: white;
+    border-radius: 40px;
+    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+}
+
+.box p {
+    color: #83BD82;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+    font-family: 'Shrikhand';
+}
+
+
+/**
+* Third section
+*/
+.third_sec {
+    display: flex;
+    padding: 30px 90px;
+    margin-bottom: 100px;
+}
+
+.faqs {
+    font-family: 'Nunito';
+    margin: 0 auto;
+}
+
+.faqs h1 {
+    text-align: center;
+}
+
+.faqs p {
+    text-align: left;
+    font-size: 25px;
+}
+
+.faqs .question {
+    margin-top: 50px;
 }
 
 
@@ -60,13 +157,14 @@ header h2 {
 footer {
     display: flex;
     flex-direction: row;
-    background-color: #DD4470;
+    background-color: #A8D6A761;
     padding: 10px 200px 30px;
-    color: whitesmoke;
     border-top: 3px solid black;
+    font-family: 'Nunito';
+    font-size: 20px;
 }
 
-.info {
+.contact {
     margin-right: auto;
     width: 70%;
 }
@@ -79,11 +177,11 @@ footer input {
     width: 50%;
     border: none;
     border-bottom: 2px solid black;
-    background-color: #DD4470;
-    color: whitesmoke;
+    background-color: white;
 }
 
 button {
+    font-family: 'Shrikhand';
     width: 12%;
     border-radius: 15px;
     border: none;
@@ -91,5 +189,15 @@ button {
     color: black;
     text-align: center;
     margin-top: 25px;
-    font-size: 16px;
+    font-size: 20px;
+}
+
+button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.button:hover {
+    background-color: #ddd;
+    color: black;
 }
