--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,14 @@
 body {
     height: 1080px;
-    background-color: #FFFCED;
+    /* background-color: #FFFCED; */
+    background-image: url("../images/background2.png");
 }
 
 .navbar {
     display: flex;
-    background-color: #FFFCED;
     padding: 20px 40px;
     gap: 50px;
-    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 8px -2px rgba(0, 0, 0, 0.341);
 }
 
 .navbar a:not(.name) {
@@ -32,15 +32,20 @@ body {
 
 /* First Section */
 .first_sec {
+    background-image: url("../images/background1.png");
+    background-size: 120vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     display: flex;
     padding: 30px 90px;
     padding-bottom: 150px;
     box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.1);
 }
 
-
 .introduction {
     margin: 0 auto;
+    margin-top: 100px;
 }
 
 .introduction h1 {
@@ -67,7 +72,7 @@ body {
     background-color: #A8D6A7;
     padding: 20px;
     text-align: center;
-    margin-top: 150px;
+    margin-top: 100px;
     font-size: 30px;
 }
 
