--- a/front/src/components/database.css
+++ b/front/src/components/database.css
@@ -1,32 +1,12 @@
-html, body {
+html,
+body {
     height: 100%;
     background-color: #FFFCED;
 }
 
-.navbar {
-    display: flex;
-    padding: 20px 40px;
-    gap: 50px;
-    box-shadow: 0px 8px 8px -2px rgba(0, 0, 0, 0.341);
-}
-
-.navbar a:not(.name) {
-    font-size: 25px;
-    text-decoration: none;
+a {
     color: black;
-    font-family: 'Nunito';
-}
-
-.navbar a:hover:not(.name) {
-    color: #A8D6A7;
-}
-
-.name {
-    font-size: 35px;
     text-decoration: none;
-    color: black;
-    margin-right: auto;
-    font-family: 'Shrikhand';
 }
 
 h1 {
@@ -44,8 +24,10 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    row-gap: 20px; /* Adjust the vertical gap as needed */
-    column-gap: 100px; /* Adjust the horizontal gap as needed */
+    row-gap: 20px;
+    /* Adjust the vertical gap as needed */
+    column-gap: 100px;
+    /* Adjust the horizontal gap as needed */
     max-width: 80%;
     margin: 0px auto;
     padding: 20px 10px;
